--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,4 +4,4 @@ dependencies:
     ruby_version: "{{ laclasse_publipostage_ruby_version }}"
     ruby_default: "{{ laclasse_publipostage_ruby_version }}"
     ruby_deploy_user: "{{ laclasse_publipostage_deploy_user }}"
-    when: '"{{ laclasse_publipostage_ruby_version }}" != "system"'
+    #when: '"{{ laclasse_publipostage_ruby_version }}" != "system"'
